# prolog-mqi

./: CHANGELOG.md  prolog-mqi.cabal
src/: PrologMQI.hs
