cabal-version:      3.0
name:               prolog-mqi
version:            0.1.0.0
synopsis:
    An interface into SWI Prolog using the Machine Query Interface (MQI).

-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Evan-Hock
maintainer:         mocaointegral@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  PrologMQI
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite prolog-mqi-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        prolog-mqi
